Trying to commit !!!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                     <div>
                    
 
-                        <div class="bg-white shadow-md rounded-lg p-6 mb-8">
+                        <div class="bg-gray-300 shadow-md rounded-lg p-6 mb-8">
                         
                             <div>
                                 <div>
